[package]
name = "mqtt-logger"
version = "0.1.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rumqttc = "0.5"
anyhow = "*"
base64 = "*"
ctrlc = "*"
log = "*"
simple_logger = "1.11.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.16.2"
zstd = "0.9.0"
