[package]
name = "mqtt-logger"
version = "0.2.1"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rumqttc = "0.10"
tokio = { version = "1.0", features = ["rt", "macros", "io-util"] } # fix for rumqttc not having correct features
anyhow = "1"
base64 = "0.13"
ctrlc = "3"
log = "0.4"
simple_logger = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.16.2"
zstd = "0.9.0"
rustls-native-certs = "0.6.0"
parse_duration = "2.1.1"
chrono = "0.4"
