[package]
name = "mqtt-replay"
version = "0.1.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
structopt = "0.3"
rumqttc = "0.5"
anyhow = "*"
base64 = "*"
ctrlc = "*"
log = "*"
simple_logger = "1.11.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
