[package]
name = "mqtt-replay"
version = "0.1.0"
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
structopt = "0.3"
rumqttc = "0.10"
anyhow = "1"
base64 = "0.13"
ctrlc = "3"
log = "0.4"
simple_logger = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.16.2"
zstd = "0.9.0"
rustls-native-certs = "0.5.0"
